[project]
name = "release-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.6"
dependencies = [
    "boto3>=1.43.23",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
